force-app/main/default/objects/Penny_Prompt__c/Penny_Prompt__c.object-meta.xml
<CustomObject>
    <description>Stores the actual prompt templates that power Penny&apos;s behavior for each capability. Backs the Prompt Studio page in Trail OS, replacing the current hardcoded pennyPromptStudioData.ts file.</description>
    <label>Penny Prompt</label>
    <nameField>
        <label>Penny Prompt Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Penny Prompts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>