force-app/main/default/objects/Penny_Prompt__c/fields/Capability__c.field-meta.xml
<CustomField>
    <fullName>Capability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which capability this prompt powers. Filter to same domain.</description>
    <inlineHelpText>Which capability this prompt powers. Filter to same domain.</inlineHelpText>
    <label>Capability</label>
    <referenceTo>Penny_Capability__c</referenceTo>
    <relationshipLabel>Penny Prompts</relationshipLabel>
    <relationshipName>Penny_Prompts</relationshipName>
    <type>Lookup</type>
</CustomField>