force-app/main/default/objects/Penny_Prompt__c/fields/Guardrails__c.field-meta.xml
<CustomField>
    <fullName>Guardrails__c</fullName>
    <description>What Penny must never do or say when this prompt is active</description>
    <inlineHelpText>What Penny must never do or say when this prompt is active</inlineHelpText>
    <label>Guardrails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>