force-app/main/default/objects/Penny_Prompt__c/fields/Last_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reviewed_Date__c</fullName>
    <description>When quality review last occurred</description>
    <inlineHelpText>When quality review last occurred</inlineHelpText>
    <label>Last Reviewed Date</label>
    <type>Date</type>
</CustomField>