force-app/main/default/objects/Penny_Prompt__c/fields/Output_Format__c.field-meta.xml
<CustomField>
    <fullName>Output_Format__c</fullName>
    <description>How Penny should structure her response</description>
    <inlineHelpText>How Penny should structure her response</inlineHelpText>
    <label>Output Format</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>