force-app/main/default/objects/Penny_Prompt__c/fields/Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Quality_Score__c</fullName>
    <description>0–100. Populated during quality review. Read-only after approval.</description>
    <inlineHelpText>0–100. Populated during quality review. Read-only after approval.</inlineHelpText>
    <label>Quality Score</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>