force-app/main/default/objects/Penny_Prompt__c/fields/Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who approved the current version</description>
    <inlineHelpText>Who approved the current version</inlineHelpText>
    <label>Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Penny_Prompts</relationshipName>
    <type>Lookup</type>
</CustomField>