force-app/main/default/objects/Penny_Prompt__c/fields/Source_Rules__c.field-meta.xml
<CustomField>
    <fullName>Source_Rules__c</fullName>
    <description>Which knowledge sources Penny should draw from</description>
    <inlineHelpText>Which knowledge sources Penny should draw from</inlineHelpText>
    <label>Source Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>