force-app/main/default/objects/Penny_Prompt__c/fields/Template_Text__c.field-meta.xml
<CustomField>
    <fullName>Template_Text__c</fullName>
    <description>The actual prompt template. Variable tokens in {curly braces}.</description>
    <inlineHelpText>The actual prompt template. Variable tokens in {curly braces}.</inlineHelpText>
    <label>Template Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>