force-app/main/default/objects/Penny_Prompt__c/fields/Trail_Scope__c.field-meta.xml
<CustomField>
    <fullName>Trail_Scope__c</fullName>
    <label>Trail Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Penny_Scope</valueSetName>
    </valueSet>
</CustomField>