force-app/main/default/objects/Penny_Prompt__c/fields/Variables__c.field-meta.xml
<CustomField>
    <fullName>Variables__c</fullName>
    <description>Comma-separated variable tokens used in Template Text</description>
    <inlineHelpText>Comma-separated variable tokens used in Template Text</inlineHelpText>
    <label>Variables</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>