force-app/main/default/objects/Penny_Prompt__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Semantic version e.g. v1.3. Required if Status = Active.</description>
    <inlineHelpText>Semantic version e.g. v1.3. Required if Status = Active.</inlineHelpText>
    <label>Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>